--- a/templates/tutorials.html
+++ b/templates/tutorials.html
@@ -26,12 +26,11 @@
         </nav>
 
         <header>
-            <h1>Quickstart</h1>
+            <h1>Tutorials</h1>
         </header>
 
         <main>
-            <!-- TODO -->
-            <p>add stuff here</p>
+            <p>blablabla2</p>
         </main>
     </body>
 </html>
