--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="https://glitch.com/favicon.ico" />
   <title>Documentation</title>
-  <link rel="stylesheet" href="/style.css" />
-  <script src="/script.js" defer></script>
+  <link rel="stylesheet" href="static/style.css" />
+  <script src="static/script.js" defer></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
