--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="https://glitch.com/favicon.ico" />
         <title>Hello World!</title>
-        <link rel="stylesheet" href="/style.css" />
-        <script src="/script.js" defer></script>
+        <link rel="stylesheet" href="static/style.css" />
+        <script src="static/script.js" defer></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,37 +18,38 @@
     <body>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="quickstart.html">Quickstart</a></li>
-                <li><a href="documentation.html">Documentation</a></li>
-                <li><a href="tutorials.html">Tutorials</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/quickstart">Quickstart</a></li>
+                <li><a href="/documentation">Documentation</a></li>
+                <li><a href="/tutorials">Tutorials</a></li>
             </ul>
         </nav>
 
         <header>
-            <h1>SigmaLang</h1>
+            <h1>sigma.</h1>
         </header>
 
         <main>
-            <p>Welcome to the official SigmaLang website!</p>
+            <p>this is the official sigma website</p>
+            <p>note that this website is still currently under development. </p>
             <p>
-                <a href="https://github.com/yourrepo" class="big-link"
-                    >GitHub Repository</a
+                <a href="https://github.com/dimini171/sigma/blob/v2/" class="big-link"
+                    >Github</a
                 >
             </p>
             <p>
-                <a href="quickstart.html" class="small-link"
-                    >Quickstart Guide</a
+                <a href="/static/" class="small-link"
+                    >Quickstart </a
                 >
             </p>
 
             <div class="faq">
                 <button class="faq-toggle">
-                    <span>What is SigmaLang?</span>
+                    <span>What is sigma?</span>
                     <span class="faq-icon">+</span>
                 </button>
                 <div class="faq-content">
-                    <p>SigmaLang is a lightweight programming language...</p>
+                    <p>sigma is a lightweight programming language...</p>
                 </div>
 
                 <button class="faq-toggle">
@@ -57,12 +58,12 @@
                 </button>
                 <div class="faq-content">
                     <p>
-                        Check out our Quickstart guide for installation steps.
+                        Check out our <a href="/quickstart">quickstart</a> guide for installation steps
                     </p>
                 </div>
             </div>
 
-            <div class="card-container">
+            <!-- <div class="card-container">
                 <div class="card">
                     <h3>Easy to Learn</h3>
                     <p>Simple syntax and beginner-friendly.</p>
@@ -75,7 +76,7 @@
                     <h3>Powerful</h3>
                     <p>Supports advanced programming features.</p>
                 </div>
-            </div>
+            </div> -->
         </main>
     </body>
 </html>
