--- a/templates/quickstart.html
+++ b/templates/quickstart.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="https://glitch.com/favicon.ico" />
         <title>Hello World!</title>
-        <link rel="stylesheet" href="/style.css" />
-        <script src="/script.js" defer></script>
+        <link rel="stylesheet" href="static/style.css" />
+        <script src="static/script.js" defer></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,10 +18,10 @@
     <body>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="quickstart.html">Quickstart</a></li>
-                <li><a href="documentation.html">Documentation</a></li>
-                <li><a href="tutorials.html">Tutorials</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/quickstart">Quickstart</a></li>
+                <li><a href="/documentation">Documentation</a></li>
+                <li><a href="/tutorials">Tutorials</a></li>
             </ul>
         </nav>
 
