--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@ p {
 
     font-family: "Atkinson Hyperlegible Mono", serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    /* font-weight: <weight>; */
     font-style: normal;
 }
 .faq-content p {
@@ -24,7 +24,7 @@ p {
 
     font-family: "Atkinson Hyperlegible Mono", serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    /* font-weight: <weight>; */
     font-style: normal;
 }
 
@@ -33,7 +33,7 @@ nav {
     padding: 0;
     font-family: "Atkinson Hyperlegible Mono", serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    /* font-weight: <weight>; */
     font-style: normal;
     overflow-x: auto;
     white-space: nowrap;
@@ -119,7 +119,7 @@ main {
 
     font-family: "Atkinson Hyperlegible Mono", serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    /* font-weight: <weight>; */
 }
 
 .faq-toggle:hover {
